@@ -23,4 +23,5 @@
 * Kevin Turner ([@keturn](https://github.com/keturn)): `SmartWrapper.Value.__repr__()` implementation 
 * Marcelo Jorge Vieira ([@marcelometal](https://github.com/marcelometal)): typos
 * Trevor Andersen ([@trevorandersen](https://github.com/trevorandersen): patches for Python 3.x
+* Carlos Martinez-Ortiz ([@cmartinez](https://github.com/cmartinez): improves support for return format HTTP parameter
 
