@@ -24,7 +24,7 @@ if _top_level_path not in sys.path:
 # end of hack
 
 from SPARQLWrapper import SPARQLWrapper
-from SPARQLWrapper import XML, GET, POST, JSON, JSONLD, N3, TURTLE, RDF, SELECT, INSERT
+from SPARQLWrapper import XML, GET, POST, JSON, JSONLD, N3, TURTLE, RDF, SELECT, INSERT, RDFXML
 from SPARQLWrapper import URLENCODED, POSTDIRECTLY
 from SPARQLWrapper import BASIC, DIGEST
 from SPARQLWrapper.Wrapper import QueryResult, QueryBadFormed, EndPointNotFound, EndPointInternalError
@@ -199,6 +199,7 @@ class SPARQLWrapper_Test(TestCase):
         self.assertTrue(self.wrapper.supportsReturnFormat(TURTLE))
         self.assertTrue(self.wrapper.supportsReturnFormat(N3))
         self.assertTrue(self.wrapper.supportsReturnFormat(RDF))
+        self.assertTrue(self.wrapper.supportsReturnFormat(RDFXML))
         self.assertFalse(self.wrapper.supportsReturnFormat('nonexistent format'))
 
         try:
@@ -576,6 +577,7 @@ class QueryResult_Test(unittest.TestCase):
         self.assertEqual(0, _mime_vs_type("application/ld+json", JSONLD))
         self.assertEqual(0, _mime_vs_type("application/rdf+xml", XML))
         self.assertEqual(0, _mime_vs_type("application/rdf+xml", RDF))
+        self.assertEqual(0, _mime_vs_type("application/rdf+xml", RDFXML))
 
         self.assertEqual(1, _mime_vs_type("application/x-foo-bar", XML), "invalid mime")
 
